--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@ p#clickHere {
 </style>
 
 <h1>Happy Valentines Day 
-  My LifeLine Mir⁠♥</h1>
+  My LifeLine Mir⁠♡</h1>
 
 <p id="clickHere">Click me everywhere. </p>
 <canvas id="c" width="500" height="500"></canvas>
@@ -52,7 +52,7 @@ var setCanvasSize = function () {
   c.height = window.innerHeight;
 };
 var randHeart = function () {
-		   return ["❤","♥️"][Math.floor(Math.random() * 2)];
+		   return ["⁠♡","⁠♡"][Math.floor(Math.random() * 2)];
 };
 var Sprite = function (x, y, rot) {
   this.x    = x || Math.random() * c.width;
