--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@ h1 {
   z-index: 2;
   color: #eee;
   transition: color 1s ease-in-out;
-  font-size: 5em;
+  font-size: 8em;
   text-align: center;
   display: flex;
   align-items: center;
@@ -35,8 +35,8 @@ p#clickHere {
 }
 </style>
 
-<h1>Happy Valentines Day 
-  My LifeLine Mir⁠♡</h1>
+<h1>Wish You Happy Valentines Day My Love Mir 
+	Mari Cute Biladi Wife</h1>
 
 <p id="clickHere">Click me everywhere. </p>
 <canvas id="c" width="500" height="500"></canvas>
@@ -52,7 +52,7 @@ var setCanvasSize = function () {
   c.height = window.innerHeight;
 };
 var randHeart = function () {
-		   return ["⁠♡","⁠♡"][Math.floor(Math.random() * 2)];
+		   return ["❤","♥"][Math.floor(Math.random() * 2)];
 };
 var Sprite = function (x, y, rot) {
   this.x    = x || Math.random() * c.width;
@@ -115,4 +115,4 @@ window.requestAnimFrame = (function(){
   requestAnimFrame(animloop);
   render();
 })();
-  </script>
+</script>
